实现了文本选中后添加至摘录本的基础功能

--- a/chrome-extension/excerptor/manifest.json
+++ b/chrome-extension/excerptor/manifest.json
@@ -14,7 +14,7 @@
 	],
 	"content_scripts": [
     	{
-    		"matches": ["*://www.baidu.com/"],
+    		"matches": ["*://*/*"],
     		"js": ["./content.js"],
     		"run_at": "document_end",
     		"css": ["./content.css"]
